refactor naming for router, adjust about backslash in post / docs, adjust naming
